# Baba

./: .gitignore
baba-chatbot-python/: .env.example  .gitignore  Dockerfile  LEEME.md  MIGRACION_COMPLETADA.md  QUICK_START.md  README.md  pyproject.toml  requirements.txt  run.py
baba-chatbot-python/config/prompts/: response-style.md
baba-chatbot-python/config/rag/kb_sources/: kavak-website-info.md
baba-chatbot-python/docs/: INSTALACION.md  MIGRACION.md
baba-chatbot-python/src/baba_chatbot/: __init__.py
baba-chatbot-python/src/baba_chatbot/api/: __init__.py  dependencies.py  main.py  routes.py
baba-chatbot-python/src/baba_chatbot/application/: __init__.py
baba-chatbot-python/src/baba_chatbot/application/abstractions/: __init__.py  interfaces.py
baba-chatbot-python/src/baba_chatbot/application/conversation/: __init__.py
baba-chatbot-python/src/baba_chatbot/application/conversation/guardrails/: __init__.py  content_moderation_result.py  (+1 more)
baba-chatbot-python/src/baba_chatbot/domain/: __init__.py
baba-chatbot-python/src/baba_chatbot/domain/entities/: __init__.py  vehicle.py
baba-chatbot-python/src/baba_chatbot/domain/value_objects/: __init__.py  vehicle_query.py
baba-chatbot-python/src/baba_chatbot/integrations/: __init__.py
baba-chatbot-python/src/baba_chatbot/integrations/catalog/: __init__.py  catalog_repository.py
baba-chatbot-python/src/baba_chatbot/integrations/llm/: __init__.py  knowledge_repository.py  llm_client.py  prompt_repository.py
baba-chatbot-python/src/baba_chatbot/integrations/twilio/: __init__.py  twilio_client.py
(+65 files in other folders)
