[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baba-chatbot"
version = "1.0.0"
description = "Chatbot de Kavak para asistencia en compra de vehículos"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "requests",
    "twilio",
    "openai",
    "python-multipart",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
baba_chatbot = ["py.typed"]
